Add frontend pages
